@@ -24,3 +24,4 @@ MEMCACHED_HOST=127.0.0.1
 MEMCACHED_PORT=11211
 
 GOOGLE_API_KEY=
+FANART_API_KEY=
